# activetrack

./: .gitignore  Dockerfile  README.md  activetrack.py  app.py  db.py  docker-compose.yml  pyproject.toml
activetrack/: __init__.py  db.py  garmin.py  sync.py
data/: activetrack.db
static/css/: style.css
static/js/: main.js
templates/: index.html
